[package]
name = "kvs"
version = "0.1.0"
authors = ["Michiel De Smet <mdesmet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
failure = "0.1.5"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.59"

[dev-dependencies]
assert_cmd = "1.0.7"
predicates = "2.0.0"
tempfile = "3.2.0"
walkdir = "2.3.2"